...
      length: 6,
      child: Scaffold(
        appBar: AppBar(
          title: const Text('dealerNET'),
          bottom: const TabBar(
            tabs: [
              Tab(icon: Icon(Icons.home), text: 'Home'),
              Tab(text: 'Arrive'),
              Tab(text: 'Walk-Thru'),
              Tab(text: 'Recommend'),
              Tab(text: 'Propose'),
              Tab(icon: Icon(Icons.lock), text: 'Admin'),
            ],
          ),
          actions: [
            IconButton(
              icon: const Icon(Icons.logout),
...
